[tool.poetry]
name = "download-content-fastapi"
version = "0.1.0"
description = ""
authors = ["Grigoriy Fedorov <dev.grigoriy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
tinydb = "^4.7.0"
python-magic = "^0.4.27"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
tqdm = "^4.64.0"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true
line_length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
